// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root-164 MuiPaper-elevation1-167 MuiPaper-rounded-165 Component-root-162 Component-root-163 Component-root-161"
>
  <h5
    className="MuiTypography-root-193 MuiTypography-h5-202 MuiTypography-colorTextPrimary-218 MuiTypography-alignCenter-209 WithStyles(ForwardRef(Typography))-root-191 WithStyles(ForwardRef(Typography))-root-192"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-335 MuiPaper-elevation0-337 MuiPaper-rounded-336 MuiExpansionPanel-root-331 MuiExpansionPanel-rounded-332 Component-root-330"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-370 MuiExpansionPanelSummary-root-364 Component-root-362"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-368 Component-content-363"
    >
      <div
        className="MuiBox-root-373 MuiBox-root-374"
      >
        <div
          className="MuiBox-root-373 MuiBox-root-375"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root-370 MuiButton-root-380 MuiButton-text-382 WithStyles(ForwardRef(Button))-root-378 WithStyles(ForwardRef(Button))-root-379 Component-root-376 Component-root-377"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-381"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root-373 MuiBox-root-400"
      >
        <h6
          className="MuiTypography-root-403 MuiTypography-h6-413 WithStyles(ForwardRef(Typography))-root-401 WithStyles(ForwardRef(Typography))-root-402"
        >
          <a
            className="MuiTypography-root-403 MuiTypography-colorInherit-425 MuiLink-root-435 MuiLink-underlineHover-437 Component-root-433 Component-root-434"
            href="/somesay/this-is-another-claim"
            onClick={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root-373 MuiBox-root-440"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-370 MuiButton-root-380 MuiButton-text-382 WithStyles(ForwardRef(Button))-root-378 WithStyles(ForwardRef(Button))-root-441"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-381"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root-370 MuiButton-root-380 MuiButton-text-382 WithStyles(ForwardRef(Button))-root-378 WithStyles(ForwardRef(Button))-root-442"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-381"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root-370 MuiButton-root-380 MuiButton-text-382 WithStyles(ForwardRef(Button))-root-378 WithStyles(ForwardRef(Button))-root-443"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-381"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-370 MuiIconButton-root-444 MuiIconButton-edgeEnd-446 MuiExpansionPanelSummary-expandIcon-369"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-452"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-453"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-462 MuiCollapse-hidden-464"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-465"
    >
      <div
        className="MuiCollapse-wrapperInner-466"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-467"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `""`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root-225 MuiGrid-container-226 MuiGrid-spacing-xs-1-248 WithStyles(ForwardRef(Grid))-root-223 WithStyles(ForwardRef(Grid))-root-224"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <a
        className="MuiTypography-root-83 MuiTypography-colorInherit-105 MuiLink-root-78 MuiLink-underlineHover-80 Component-root-76 Component-root-77"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="Component-logo-113"
          src="logo.svg"
        />
      </a>
      <h6
        className="MuiTypography-root-83 MuiTypography-h6-93 WithStyles(ForwardRef(Typography))-root-114 WithStyles(ForwardRef(Typography))-root-115 Component-ohhey-33"
      >
        oh hey!
      </h6>
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-135 MuiButton-root-118 MuiButton-text-120 WithStyles(ForwardRef(Button))-root-116 WithStyles(ForwardRef(Button))-root-117"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-119"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-138 MuiSvgIcon-colorPrimary-139"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </header>
</header>
`;

exports[`Storyshots Sources default 1`] = `
<sup
  className="Component-sup-618"
  onClick={[Function]}
>
  [
  <span
    className="Component-note-619"
  >
    *
  </span>
  ]
</sup>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation1-9 MuiPaper-rounded-7 Component-root-4 Component-root-5 Component-root-3"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-481 MuiPaper-elevation1-484 MuiPaper-rounded-482 Component-root-479 Component-root-480 Component-root-478"
>
  <div
    className="MuiToolbar-root-510 MuiToolbar-regular-512 MuiToolbar-gutters-511 WithStyles(ForwardRef(Toolbar))-root-508 WithStyles(ForwardRef(Toolbar))-root-509"
  >
    <div
      className="MuiBox-root-514 MuiBox-root-515"
    />
    <div
      className="MuiBox-root-514 MuiBox-root-516"
    >
      <a
        className="MuiTypography-root-524 MuiTypography-colorInherit-546 MuiLink-root-519 MuiLink-underlineHover-521 Component-root-517 Component-root-518"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-554 MuiSvgIcon-fontSizeInherit-560"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root-583 MuiButton-root-566 MuiButton-text-568 WithStyles(ForwardRef(Button))-root-564 WithStyles(ForwardRef(Button))-root-565 Styled(WithStyles(ForwardRef(Button)))-root-563"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-567"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-554 MuiSvgIcon-fontSizeInherit-560"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root-524 MuiTypography-subtitle1-535 MuiTypography-colorTextPrimary-549 MuiTypography-alignCenter-540 WithStyles(ForwardRef(Typography))-root-600 WithStyles(ForwardRef(Typography))-root-601"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root-524 MuiTypography-h5-533 MuiTypography-colorTextPrimary-549 MuiTypography-alignCenter-540 WithStyles(ForwardRef(Typography))-root-600 WithStyles(ForwardRef(Typography))-root-602"
  >
    <a
      className="MuiTypography-root-524 MuiTypography-colorInherit-546 MuiLink-root-519 MuiLink-underlineHover-521 Component-root-517 Component-root-603"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root-524 MuiTypography-body1-526 MuiTypography-alignCenter-540 WithStyles(ForwardRef(Typography))-root-600 WithStyles(ForwardRef(Typography))-root-604"
  >
    <button
      className="MuiButtonBase-root-583 MuiButton-root-566 MuiButton-text-568 WithStyles(ForwardRef(Button))-root-564 WithStyles(ForwardRef(Button))-root-605"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-567"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root-583 MuiButton-root-566 MuiButton-text-568 WithStyles(ForwardRef(Button))-root-564 WithStyles(ForwardRef(Button))-root-606"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-567"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root-583 MuiButton-root-566 MuiButton-text-568 WithStyles(ForwardRef(Button))-root-564 WithStyles(ForwardRef(Button))-root-607"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-567"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
  </div>
</div>
`;
